--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-image: url('http://getwallpapers.com/wallpaper/full/9/2/3/1164467-free-3d-money-wallpapers-1920x1080-htc.jpg'); /* Replace with relevant image */
+    background-image: url('https://img.pikbest.com/ai/illus_our/20230427/c1f590b396423c5eca11e8ec940ffec2.jpg!w700wp'); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
